@@ -67,6 +67,10 @@ All (GUI):
 
 - Update Scintilla to v3.6.3 (Paul Kulchenko).
 
+wxGTK:
+
+- Implement setting link colours in wxHyperlinkCtrl for GTK+3 (Hanmac).
+
 wxMSW:
 
 - Fix crash when using wxCHMHelpController() in 64 bit builds (Xlord2).
